--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,22 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="muralpolicia.muralpolicia.LoginActivity">
+    tools:context="muralpolicia.activities.LoginActivity">
 
 
     <RelativeLayout
-        android:layout_width="368dp"
-        android:layout_height="495dp"
-        tools:layout_editor_absoluteY="8dp"
-        tools:layout_editor_absoluteX="8dp">
-
-        <EditText
-            android:id="@+id/editText_Senha"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/editText_Login"
-            android:hint="Senha"
-            android:textSize="30sp" />
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.024">
 
         <TextView
             android:id="@+id/tituloApp"
@@ -29,8 +24,7 @@
             android:layout_centerHorizontal="true"
             android:text="Mural Policia"
             android:textAlignment="center"
-            android:textSize="30sp"
-
+            android:textSize="40sp"
             />
 
         <EditText
@@ -39,17 +33,32 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/tituloApp"
             android:hint="Login"
-            android:textSize="30sp" />
+            android:textSize="30sp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            />
+
+        <EditText
+            android:id="@+id/editText_Password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/editText_Login"
+            android:hint="Senha"
+            android:textSize="30sp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            />
 
         <Button
             android:id="@+id/button_Salvar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/editText_Senha"
+            android:layout_below="@+id/editText_Password"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="13dp"
             android:text="Salvar"
-            android:textSize="30sp" />
+            android:padding="10dp"
+            android:textSize="40sp" />
 
     </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
