--- a/app/src/main/res/layout/mural_grid_item.xml
+++ b/app/src/main/res/layout/mural_grid_item.xml
@@ -9,8 +9,8 @@
 
     <ImageView
         android:id="@+id/grid_image"
-        android:layout_width="200dp"
-        android:layout_height="150dp">
+        android:layout_width="400px"
+        android:layout_height="300px">
     </ImageView>
 
     <!--<TextView-->
