--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,6 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="muralpolicia.activity.MainActivity">
     <item
+        android:id="@+id/refresh"
+        android:orderInCategory="100"
+        android:icon="@mipmap/ic_refresh_white_24dp"
+        app:showAsAction="always"
+        android:title="@string/refresh"
+        />
+    <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
