--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -46,6 +46,7 @@
             android:layout_below="@+id/editText_Login"
             android:hint="Senha"
             android:textSize="30sp"
+            android:inputType="textPassword"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             />
@@ -56,9 +57,9 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/editText_Password"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="13dp"
-            android:text="Salvar"
+            android:layout_marginTop="11dp"
             android:padding="10dp"
+            android:text="Salvar"
             android:textSize="40sp" />
 
     </RelativeLayout>
